# DDGI

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
assets/ddgi/: default_volume.json
include/app/: DDGISample.h
include/ddgi/: DDGIPasses.h  DDGIPipeline.h  DDGIResources.h  DDGITypes.h  DDGIVolume.h
include/debug/: DebugAtlasWindow.h  DebugUI.h  ProbeVisualizer.h  TextureVisualizer.h
include/renderer/: ForwardScenePass.h  GBufferPass.h  LightingPass.h  Renderer.h
include/rt/: AccelerationStructure.h  RayTracingContext.h  RayTracingPipeline.h  ShaderBindingTable.h  SoftwareBvh.h
include/scene/: GltfSceneLoader.h  Scene.h  SceneGpuData.h
include/sdf/: ProbeSDFUpdater.h  SDFGenerator.h  SDFVolume.h
shaders/glsl/base/: uioverlay.frag  uioverlay.vert
shaders/glsl/common/: ddgi_common.glsl  ddgi_query.glsl  light_common.glsl  pbr_common.glsl
shaders/glsl/ddgi/: ddgi_classify.comp  ddgi_copy_borders.comp  ddgi_relocate.comp  ddgi_sdf_probe_update.comp  ddgi_update_depth.comp  ddgi_update_depth_squared.comp  ddgi_update_irradiance.comp
shaders/glsl/debug/: probe_debug.vert  texture_debug.frag  texture_debug.vert
shaders/glsl/lighting/: ddgi_lighting.frag
shaders/glsl/rt/: ddgi_trace.rahit  ddgi_trace.rchit  ddgi_trace.rgen  ddgi_trace.rmiss
shaders/glsl/scene/: forward_scene.frag  forward_scene.vert  gbuffer_scene.frag  gbuffer_scene.vert
shaders/glsl/sdf/: sdf_clear.comp  sdf_common.glsl  sdf_finalize.comp  sdf_jump_flood.comp  sdf_voxelize_surface.comp
src/app/: DDGISample.cpp  main.cpp
src/ddgi/: DDGIPasses.cpp  DDGIPipeline.cpp  DDGIResources.cpp  DDGIVolume.cpp
src/debug/: DebugAtlasWindow.cpp  DebugUI.cpp  ProbeVisualizer.cpp  TextureVisualizer.cpp
src/renderer/: ForwardScenePass.cpp  GBufferPass.cpp  LightingPass.cpp  Renderer.cpp
src/rt/: AccelerationStructure.cpp  RayTracingContext.cpp  RayTracingPipeline.cpp  ShaderBindingTable.cpp  SoftwareBvh.cpp
src/scene/: GltfSceneLoader.cpp  Scene.cpp  SceneGpuData.cpp
src/sdf/: ProbeSDFUpdater.cpp  SDFGenerator.cpp  SDFVolume.cpp
src/vulkan_base/: Buffer.cpp  Buffer.h  CMakeLists.txt  DisplayWindow.cpp  DisplayWindow.h  HUD.cpp  HUD.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  VKMDevice.cpp  VKMDevice.h  VKM_Tools.cpp  VKM_Tools.h  VK_Base.cpp  VK_Base.h  camera.hpp  glTFModel.cpp  glTFModel.h
